poppr 2.4.1
===========

BUG FIX
-------

* A corner case where repeat length vectors out of order would be erroneously
  subset with `test_replen()` and `fix_replen()` has been fixed. See
  https://github.com/grunwaldlab/poppr/issues/136 for details.

poppr 2.4.0
===========

NEW FUNCTIONS
-------------

* `jack.ia()` will randomly jackknife your sample to a specified n (default
  is the number of MLG), and calculate the index of association over 
  multiple iterations, giving a distribution of possible values at a given
  sample size.

NEW FEATURES
------------

* The function `mlg.table()` gains new parameters, "color" and "background". The
  "color" parameter will create a single barplot with colors representing 
  populations while the "background" parameter will create a background plot 
  showing the abundance of MLGs across populations within the facets.
* The function `win.ia()` will now take into consideration chromosomal
  coordinates when constructing windows. It has additionally acquired a new
  parameter `chromosome_buffer`, which allows the user to specify whether or not
  the window should be limited to within chromosomes.
  
NOTABLE CHANGES
---------------

* calculation of MLGs for snpclone and genlight objects will be performed via 
  distance-based methods by default. This is in contrast to the previous behavior
  where individuals were assumed to have unique genotypes. 
  see https://github.com/grunwaldlab/poppr/issues/125 for details.
* An error will be thrown when attempting to use `mlg.crosspop()` with an object
  that has < 2 populations.
* `genotype_curve()` will now remove monomorphic loci before calculation by
  default as these loci misleadingly influence the shape of the curve. This will
  change the shape of the curve if you have monomorphic loci. This change IS
  optional via the drop and dropna parameters, but it is not recommended to 
  change these parameters. 